config/k3s/apps/qbittorrentee/qbittorrentee.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-qbittorrentee
  labels:
    app: qbittorrentee
  namespace: qbittorrentee
spec:
  serviceName: statefulset-qbittorrentee
  replicas: 1
  template:
    metadata:
      labels:
        app: qbittorrentee
    spec:
      containers:
        - image: superng6/qbittorrentee
          name: qbittorrentee
          ports:
            - containerPort: 8080
              name: webui
            - containerPort: 6881
              name: bt
            - containerPort: 6881
              protocol: UDP
              name: bt-udp
          volumeMounts:
            - name: downloads
              mountPath: "/downloads"
            - name: config
              mountPath: "/config"
          resources:
            limits:
              memory: 1Gi
              cpu: "2"
            requests:
              memory: 512Mi
              cpu: "2"
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: qbittorrentee
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Delete
  volumeClaimTemplates:
    - metadata:
        name: downloads
        annotations:
          volume.beta.kubernetes.io/storage-class: sc-qbittorrentee-downloads
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Ti
    - metadata:
        name: config
        annotations:
          volume.beta.kubernetes.io/storage-class: sc-qbittorrentee-config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: srv-qbittorrentee-webui
  namespace: qbittorrentee
spec:
  type: ClusterIP
  selector:
    app: qbittorrentee
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - port: 8080
      protocol: TCP
      name: webui
      targetPort: webui

---
apiVersion: v1
kind: Service
metadata:
  name: srv-qbittorrentee-bt
  namespace: qbittorrentee
spec:
  type: NodePort
  selector:
    app: qbittorrentee
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - port: 6881
      protocol: TCP
      name: bt
      targetPort: bt
      nodePort: 30681
    - port: 6881
      protocol: UDP
      name: bt-udp
      targetPort: bt-udp
      nodePort: 30681

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-qbittorrentee-path
  namespace: qbittorrentee
spec:
  stripPrefix:
    prefixes:
      - /qbittorrentee

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-qbittorrentee
  namespace: qbittorrentee
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`app.chiyuki.life`) && PathPrefix(`/qbittorrentee/`)
      middlewares:
        - name: strip-qbittorrentee-path
      kind: Rule
      services:
        - name: srv-qbittorrentee
          port: 8080
  tls:
    certResolver: chiyukilife
    domains:
      - main: "*.chiyuki.life"
